fixes task1